hphp/hack/test/typecheck/inout/bad_inout_decl_retbyref2.php
<?hh

final class C {
  public function &bar(inout $x): void {}
}
